--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
 <head>
-    <title>ポッドキャストミキサー</title>
+    <title>Podcast Public Sound Generator(PPSG)</title>
 </head>
 <body>
-    <h1>Podcast Public Sound Generator</h1>
+    <h1>Podcast Public Sound Generator(PPSG)</h1>
     <form action="{{ url_for('mix') }}" method="post" enctype="multipart/form-data">
         <label for="audio">ポッドキャスト音声:</label>
         <input type="file" name="audio" id="audio" required><br><br>
