--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,10 @@
 <!doctype html>
 <html>
+
 <head>
   <title>Podcast Public Sound Generator(PPSG)</title>
 </head>
+
 <body>
   <h1>Podcast Public Sound Generator(PPSG)</h1>
   <form action="{{ url_for('mix') }}" method="post" enctype="multipart/form-data">
@@ -10,11 +12,16 @@
     <input type="file" name="audio" id="audio" required><br><br>
     <label for="bgm">BGM:</label>
     <select name="bgm" id="bgm" required>
-      {% for opt in options %}
-      <option value="{{ opt.file }}">{{ opt.label }}</option>
+      {% for group_data in options %}
+      <optgroup label="{{ group_data.group_label }}">
+        {% for opt in group_data.options %}
+        <option value="{{ opt.file }}">{{ opt.label }}({{ opt.stem }})</option>
+        {% endfor %}
+      </optgroup>
       {% endfor %}
     </select><br><br>
     <button type="submit">ミックスしてダウンロード</button>
   </form>
 </body>
+
 </html>
