--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,27 @@
     <audio id="previewAudio"></audio>
     <button type="submit">ミックスしてダウンロード</button>
   </form>
+  <hr>
+  <h2>カバーアート生成</h2>
+  <div id="coverGenerator">
+    <label for="template">テンプレート:</label>
+    <select id="template" required>
+      {% for t in templates %}
+      <option value="{{ t }}">{{ t }}</option>
+      {% endfor %}
+    </select><br><br>
+    <label for="title">タイトル:</label>
+    <input type="text" id="title"><br><br>
+    <label for="date">配信日(YYYY-MM-DD):</label>
+    <input type="text" id="date"><br><br>
+    <label for="category">カテゴリ:</label>
+    <input type="text" id="category"><br><br>
+    <button type="button" id="generateBtn">プレビュー生成</button>
+  </div>
+  <div id="previewArea"></div>
+  <a id="downloadLink"></a>
   <script src="{{ url_for('static', filename='js/preview.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/coverart.js') }}"></script>
 </body>
 
 </html>
