Change category field to genre

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,8 +37,8 @@
     <input type="text" id="title"><br><br>
     <label for="date">配信日(YYYY-MM-DD):</label>
     <input type="text" id="date"><br><br>
-    <label for="category">カテゴリ:</label>
-    <input type="text" id="category"><br><br>
+    <label for="genre">ジャンル:</label>
+    <input type="text" id="genre"><br><br>
     <button type="button" id="generateBtn">プレビュー生成</button>
   </div>
   <div id="previewArea"></div>
