--- a/templates/cover_templates/simple.html
+++ b/templates/cover_templates/simple.html
@@ -13,7 +13,7 @@
   <div class="container">
     <h1>{{ title }}</h1>
     <p>{{ date }}({{ weekday }})</p>
-    <p>{{ category }}</p>
+    <p>{{ genre }}</p>
   </div>
 </body>
 </html>
