--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,7 @@
 
 <head>
   <title>Podcast Public Sound Generator(PPSG)</title>
-  <style>
-    #coverArea { width: 500px; height: 500px; }
-    #coverFrame { width: 100%; height: 100%; border: none; }
-  </style>
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 
 <body>
