--- a/templates/cover_templates/default.html
+++ b/templates/cover_templates/default.html
@@ -1,12 +1,6 @@
 <html>
 <head>
-<style>
-  body { width: 500px; height: 500px; position: relative; background: #eee; }
-  #title { position: absolute; top: 200px; width: 100%; text-align: center; font-size: 24px; }
-  #date { position: absolute; top: 250px; width: 100%; text-align: center; font-size: 16px; }
-  #day { position: absolute; top: 270px; width: 100%; text-align: center; font-size: 16px; }
-  #genre { position: absolute; top: 290px; width: 100%; text-align: center; font-size: 16px; }
-</style>
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/cover_default.css') }}">
 </head>
 <body>
   <div id="title">{{ title }}</div>
