--- a/templates/cover_templates/default.html
+++ b/templates/cover_templates/default.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/cover_default.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='templates/default/main.css') }}">
 </head>
 <body>
   <div id="title">{{ title }}</div>
