if文の指定誤り修正

--- a/templates/cover_templates/chieradi.html
+++ b/templates/cover_templates/chieradi.html
@@ -17,7 +17,7 @@
     </div>
     <div class="theme">
       <div class="text">
-        {% if not genre %}<span id="todaystheme">きょうのテーマは…</span>{% endif %}
+        {% if genre %}<span id="todaystheme">きょうのテーマは…</span>{% endif %}
         <span id="theme">{{ genre }}</span>
       </div>
     </div>
