音声ミックスの再生機能を追加

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,9 +32,12 @@
     <label for="target_db">目標音量(dB):</label>
     <input type="number" name="target_db" id="target_db" value="{{ target_db }}" step="0.1" class="savecontrol"><br><br>
     <button type="button" id="previewBtn">BGM視聴</button><br><br>
-    <audio id="previewAudio"></audio>
-    <button type="submit">ミックスしてダウンロード</button>
+    <audio id="previewAudio"></audio><br><br>
+    <button type="submit">ミックスして再生</button>
   </form>
+  <h2>ミックス結果</h2>
+  <audio id="mixedAudio" controls></audio><br>
+  <a id="mixedDownload" download="mixed.mp3">ミックス音声ダウンロード</a>
   <h2>カバーアート</h2>
   <div id="coverArea"><iframe id="coverFrame"></iframe></div>
   <a id="coverDownload" href="#">カバーアートダウンロード</a>
@@ -42,6 +45,7 @@
   <script src="{{ url_for('static', filename='js/savecontrol.js') }}"></script>
   <script src="{{ url_for('static', filename='js/html2canvas.min.js') }}"></script>
   <script src="{{ url_for('static', filename='js/cover.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/mix.js') }}"></script>
 </body>
 
 </html>
