Trigger mix on audio upload

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,7 @@
     <button type="button" id="previewBtn">BGM視聴</button><br><br>
     <audio id="previewAudio"></audio><br><br>
     <button type="submit">ミックスして再生</button>
+    <div id="mixProgress" class="spinner" style="display:none;"></div><br><br>
   </form>
   <h2>ミックス結果</h2>
   <audio id="mixedAudio" controls></audio><br>
