--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,3 +9,18 @@
   height: 100%;
   border: none;
 }
+
+.spinner {
+  width: 24px;
+  height: 24px;
+  border: 3px solid #ccc;
+  border-top-color: #333;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
