実情に即して再ミックスボタンのキャプション変更

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
     <input type="number" name="target_db" id="target_db" value="{{ target_db }}" step="0.1" class="savecontrol"><br><br>
     <button type="button" id="previewBtn">BGM視聴</button><br><br>
     <audio id="previewAudio"></audio><br>
-    <button type="submit">ミックスしてダウンロード</button>
+    <button type="submit">ミックス音声の再生成</button>
     <div id="mixProgress" class="spinner" style="display:none;"></div><br><br>
   </form>
   <h2>ミックス結果</h2>
