--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
       <label for="template">カバーアートテンプレート:</label>
       <select id="template" class="savecontrol"></select>
     </div>
-    <div class="form-item">
+    <div class="form-item form-inline">
       <label for="bgm">BGM:</label>
       <select name="bgm" id="bgm" required>
         {% for group_data in options %}
@@ -40,13 +40,11 @@
         </optgroup>
         {% endfor %}
       </select>
+      <button type="button" id="previewBtn" class="preview-btn">BGM視聴</button>
     </div>
     <div class="form-item">
       <label for="target_db">目標音量(dB):</label>
       <input type="number" name="target_db" id="target_db" value="{{ target_db }}" step="0.1" class="savecontrol">
-    </div>
-    <div class="form-item">
-      <button type="button" id="previewBtn">BGM視聴</button>
     </div>
     <div class="form-item">
       <audio id="previewAudio"></audio>
