mix: merge id3 tags with form data

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,15 +15,15 @@
     </div>
     <div class="form-item">
       <label for="title">タイトル:</label>
-      <input type="text" id="title">
+      <input type="text" id="title" name="title">
     </div>
     <div class="form-item">
       <label for="genre">ジャンル:</label>
-      <input type="text" id="genre">
+      <input type="text" id="genre" name="genre">
     </div>
     <div class="form-item">
       <label for="date">配信日:</label>
-      <input type="date" id="date">
+      <input type="date" id="date" name="date">
     </div>
     <div class="form-item">
       <label for="template">カバーアートテンプレート:</label>
