Add artist and comment fields

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,14 @@
       <input type="text" id="genre" name="genre">
     </div>
     <div class="form-item">
+      <label for="artist">アーティスト:</label>
+      <input type="text" id="artist" name="artist" class="savecontrol">
+    </div>
+    <div class="form-item">
+      <label for="comment">コメント:</label>
+      <textarea id="comment" name="comment" rows="3"></textarea>
+    </div>
+    <div class="form-item">
       <label for="date">配信日:</label>
       <input type="date" id="date" name="date">
     </div>
