Use description ID3 tag

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,8 +26,8 @@
       <input type="text" id="artist" name="artist" class="savecontrol">
     </div>
     <div class="form-item">
-      <label for="comment">コメント:</label>
-      <textarea id="comment" name="comment" rows="3"></textarea>
+      <label for="description">説明:</label>
+      <textarea id="description" name="description" rows="3"></textarea>
     </div>
     <div class="form-item">
       <label for="date">配信日:</label>
