--- a/static/templates/default/main.css
+++ b/static/templates/default/main.css
@@ -1,34 +1,27 @@
 body {
   width: 500px;
   height: 500px;
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
   background: #eee;
 }
+
 #title {
-  position: absolute;
-  top: 200px;
-  width: 100%;
-  text-align: center;
+  max-width: 91%;
   font-size: 24px;
 }
+
 #date {
-  position: absolute;
-  top: 250px;
-  width: 100%;
-  text-align: center;
   font-size: 16px;
 }
+
 #day {
-  position: absolute;
-  top: 270px;
-  width: 100%;
-  text-align: center;
   font-size: 16px;
 }
+
 #genre {
-  position: absolute;
-  top: 290px;
-  width: 100%;
-  text-align: center;
   font-size: 16px;
 }
