プログレスリングの位置微調整

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -44,6 +44,11 @@ div#coverArea {
   }
 }
 
+#mixProgress {
+  display: none;
+  margin-left: 0.5em;
+}
+
 .form-item {
   margin-bottom: 1em;
   display: flex;
