--- a/templates/index.html
+++ b/templates/index.html
@@ -76,7 +76,7 @@
         <a id="mixedDownload" download="mixed.mp3">ミックス音声ダウンロード</a>
         <div class="form-item">
           <button type="submit" form="mixForm">ミックス音声の再生成</button>
-          <div id="mixProgress" class="spinner" style="display:none;"></div>
+          <div id="mixProgress" class="spinner"></div>
         </div>
       </div>
       <div id="coverArt">
