--- a/templates/index.html
+++ b/templates/index.html
@@ -51,6 +51,13 @@
         <label for="target_db">目標音量(dB):</label>
         <input type="number" name="target_db" id="target_db" value="{{ target_db }}" step="0.1" class="savecontrol">
       </div>
+      <div class="form-item">
+        <label>ノイズ除去:</label>
+        <select id="noise_reduction" name="noise_reduction" class="savecontrol">
+          <option value="none">なし</option>
+          <option value="1stOne">最初の一秒をノイズ扱いとして除去</option>
+        </select>
+      </div>
       <a id="archiveDownload" href="#">アーカイブ音声ダウンロード</a>
       <div class="form-item">
         <audio id="previewAudio"></audio>
