--- a/templates/cover_templates/chieradi.html
+++ b/templates/cover_templates/chieradi.html
@@ -5,6 +5,8 @@
   <title>ちえラジChat</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <link rel="stylesheet" href="{{ url_for('static', filename='templates/chieradi/main.css') }}">
+  <link rel="preload" as="font" href="{{ url_for('static', filename='templates/chieradi/keifont.ttf') }}"
+    type="font/ttf" crossorigin>
 </head>
 
 <body>
