--- a/templates/cover_templates/chieradi.html
+++ b/templates/cover_templates/chieradi.html
@@ -35,7 +35,7 @@
     <div>
       <div class="text">
         <span id="chname">ちえラジ Chat</span>
-        <span id="chdest">NPO法人 まちづくりエージェント SIDE BEACH CITY.の高見知英がおくる雑談ラジオ。</span>
+        <span id="chdest">地域とITを融合し、社会課題解決を目指す。プログラミングやポッドキャストなど多方面で活動する高見知英がおくる雑談ラジオ。</span>
       </div>
     </div>
   </article>
